@@ -32,6 +32,7 @@ import struct
 import socket
 import fcntl
 import traceback
+import syslog
 import debconf
 import apt_pkg
 from apt.package import Package
@@ -167,7 +168,8 @@ class DebconfInstallProgress(InstallProgress):
             except (KeyboardInterrupt, SystemExit):
                 pass # we're going to exit anyway
             except:
-                traceback.print_exc(file=sys.stderr)
+                for line in traceback.format_exc().split('\n'):
+                    syslog.syslog(syslog.LOG_WARN, line)
             os._exit(0)
 
         self.statusfd.close()
@@ -279,8 +281,9 @@ class Install:
             return
 
         tbtext = ''.join(traceback.format_exception(exctype, excvalue, exctb))
-        print >>sys.stderr, "Exception during installation:"
-        print >>sys.stderr, tbtext
+        syslog.syslog(syslog.LOG_ERROR, "Exception during installation:")
+        for line in tbtext.split('\n'):
+            syslog.syslog(syslog.LOG_ERROR, line)
         tbfile = open('/var/lib/ubiquity/install.trace', 'w')
         print >>tbfile, tbtext
         tbfile.close()
@@ -523,7 +526,8 @@ class Install:
             target_log_file = os.path.join(target_dir,
                                            os.path.basename(log_file))
             if not misc.ex('cp', '-a', log_file, target_log_file):
-                misc.pre_log('error', 'Failed to copy installation log file')
+                syslog.syslog(syslog.LOG_ERROR,
+                              'Failed to copy installation log file')
             os.chmod(target_log_file, stat.S_IRUSR | stat.S_IWUSR)
 
 
@@ -536,7 +540,7 @@ class Install:
                 os.mkdir(self.source)
             except Exception, e:
                 print e
-            misc.pre_log('info', 'mkdir %s' % self.source)
+            syslog.syslog('mkdir %s' % self.source)
 
         # Autodetection on unionfs systems
         for line in open('/proc/mounts'):
@@ -692,8 +696,7 @@ class Install:
         if not langpacks:
             langpack_db = self.db.get('debian-installer/locale')
             langpacks = [langpack_db.split('_')[0]]
-        misc.pre_log('info',
-                     'keeping language packs for: %s' % ' '.join(langpacks))
+        syslog.syslog('keeping language packs for: %s' % ' '.join(langpacks))
 
         try:
             lppatterns = self.db.get('pkgsel/language-pack-patterns').split()
@@ -729,8 +732,8 @@ class Install:
                 self.db.progress('STOP')
                 return
         except IOError, e:
-            print >>sys.stderr, e
-            sys.stderr.flush()
+            for line in str(e).split('\n'):
+                syslog.syslog(syslog.LOG_WARN, line)
             self.db.progress('STOP')
             raise
         cache.open(None)
@@ -759,13 +762,13 @@ class Install:
                 self.db.progress('STOP')
                 return
         except IOError, e:
-            print >>sys.stderr, e
-            sys.stderr.flush()
+            for line in str(e).split('\n'):
+                syslog.syslog(syslog.LOG_WARN, line)
             self.db.progress('STOP')
             raise
         except SystemError, e:
-            print >>sys.stderr, e
-            sys.stderr.flush()
+            for line in str(e).split('\n'):
+                syslog.syslog(syslog.LOG_WARN, line)
             self.db.progress('STOP')
             raise
         self.db.progress('SET', 100)
@@ -1097,8 +1100,8 @@ class Install:
                 self.db.progress('STOP')
                 return
         except SystemError, e:
-            print >>sys.stderr, e
-            sys.stderr.flush()
+            for line in str(e).split('\n'):
+                syslog.syslog(syslog.LOG_ERROR, line)
             self.db.progress('STOP')
             raise
         self.db.progress('SET', 5)
@@ -1236,7 +1239,7 @@ class Install:
         for word in args:
             msg += str(word) + ' '
         if not misc.ex('chroot', self.target, *args):
-            misc.pre_log('error', 'chroot ' + msg)
+            syslog.syslog(syslog.LOG_ERROR, 'chroot ' + msg)
             return False
         return True
 
